--- a/index.html
+++ b/index.html
@@ -3,20 +3,57 @@
 <head>
     <meta charset='UTF-8'>
     <meta name="viewport" content="width=device-width, intial-scale=1.0">
-    <title>LR2</title> 
+    <title>Сурова Анна Андреевна 25.03.2022</title> 
     <link rel="stylesheet" href="styles/reseter.css">
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-    <header>
+    <header class="header">
+        <div class="flexLogo">
+            <img src="image/Group 1399.svg" alt="logo">
+        </div>
+        <div class="flexSection">
+            <nav>
+                <ul class="line">
+                    <li><a href="">Home</a> </li>
+                    <li><a href="">Categories</a> </li>
+                    <li><a href="">My Collections</a> </li>
+                    <li><a href="">Blog</a> </li>
+                </ul>
+            </nav>
+        </div>
+        <div class="flexSing"> 
+            <a class="sign" href="">Login</a> 
+            <a class="sign" href="">Sign Up</a>
+            <a class="sign" href="form.html">Form</a>
 
+        </div>
     </header>
 
     <main>
+        <section>
+            <!--<div class="flexMain">*/ -->
+                <div class="flexMainText"> 
+                    <div >
+                        <h1>Awesome tools for Designer & Developer <span class="point">. </span></h1>
+                        <p>Antool is a web collection of information on paid or free Design and Development tools</p>
+                    </div>
+                    <div> 
+                        <input class="formBox" type="text" name="inquiry" placeholder="find more than 430+ tools...">
+                        <a class="buttonSearch" href="">Search</a>
+                    </div>
+                </div>
+                <div>
+                    <img src="image/Illustration.svg" alt="Illustration" class="backgroundImg">
+                </div>
+
+                
+                
+            <!-- </div> -->
+
+        </section>
+
 
     </main>
 
-    <footer>
-
-    </footer>
 </body>
